<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.MainActivity">
    <item
        android:id="@+id/action_search"
        android:title="@string/menu_action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_login"
        android:title="@string/menu_action_login"
        android:icon="@drawable/ic_me"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_my_message"
        android:title="@string/menu_action_message"
        android:icon="@drawable/ic_notifications"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_download"
        android:title="@string/menu_action_download"
        android:icon="@drawable/ic_file_download"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sync_bookshelf"
        android:title="@string/menu_action_sync"
        android:icon="@drawable/ic_sync"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_scan_local_book"
        android:title="@string/menu_action_scan"
        android:icon="@drawable/ic_local_see"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_wifi_book"
        android:title="@string/menu_action_transfer"
        android:icon="@drawable/ic_wifi"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_feedback"
        android:title="@string/menu_action_feedback"
        android:icon="@drawable/ic_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_night_mode"
        android:title="@string/menu_action_night_mode"
        android:icon="@drawable/ic_night"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_action_setting"
        android:icon="@drawable/ic_setting"
        app:showAsAction="never" />
</menu>